prepare to live test
